<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.das.jcastro.tpyn.SigninActivity">

    <TextView android:text="@string/email" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signinTextViewUser" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signinEditTextUser"
        android:layout_below="@+id/signinTextViewUser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textWebEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/signinTextViewPass"
        android:layout_below="@+id/signinEditTextUser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signinEditTextPass"
        android:layout_below="@+id/signinTextViewPass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/signinEditTextUser"
        android:layout_alignEnd="@+id/signinEditTextUser" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_password"
        android:id="@+id/signinTextViewPass2"
        android:layout_below="@+id/signinEditTextPass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signinEditTextPass2"
        android:layout_below="@+id/signinTextViewPass2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/signinEditTextPass"
        android:layout_alignEnd="@+id/signinEditTextPass" />

</RelativeLayout>
